--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "1.0.0",
   "description": "TP API REST avec Node.js et MongoDB",
   "main": "server.js",
-  "scripts": {
-    "start": "node server. js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies":  {
+  "dependencies": {
     "dotenv": "^16.3.1",
-    "express":  "^4.18.2",
+    "express": "^4.18.2",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "jest": "^30.2.0",
     "nodemon": "^3.0.2"
-  }
+  },
+  "scripts": {
+  "start": "node server.js",
+  "test": "jest",
+  "test:watch": "jest --watch",
+  "test:coverage": "jest --coverage",
+  "dev": "nodemon server.js"
+
+}
+
 }
